--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
+<!-- Probably add here all the refs to the google fonts -->
+
 <meta http-equiv="cleartype" content="on">
